[package]
name = "dp-secrets-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
kube = {version = "0.98.0" , default-features = false, features = ["client"]}
k8s-openapi = { version = "0.24.0", features = ["latest"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
